Ajoute un chapeau sur la page d’accueil

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: accueil
 ---
 <section class="chapeau">
-Bienvenue sur le portail de l’ANSSI
+    <h1>Mes Services Cyber</h1>
+    <p>Trouvez les services et les ressources adaptées à vos besoins et votre niveau cyber.</p>
+    <a href="/test-maturite" class="bouton primaire">Testez votre maturité cyber</a>
+    <a href="/services" class="bouton secondaire">Découvrir nos services</a>
 </section>
-
