Fais pointer le lien sur la page Catalogue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: accueil
     <h1>Mes Services Cyber</h1>
     <p>Trouvez les services et les ressources adaptées à vos besoins et votre niveau cyber.</p>
     <a href="/test-maturite" class="bouton primaire">Testez votre maturité cyber</a>
-    <a href="/services" class="bouton secondaire">Découvrir nos services</a>
+    <a href="/catalogue/" class="bouton secondaire">Découvrir nos services</a>
 </section>
 <section class="services-dispos">
     <h1>Les services disponibles</h1>
