Supprime le mot `service` des propriétés du service
... afin de préparer l’uniformisation avec les ressources et car c’est redondant

--- a/catalogue.html
+++ b/catalogue.html
@@ -16,9 +16,9 @@ permalink: /catalogue/
       "services": [
           {% for service in site.services %}
         {
-          "nom": "{{ service.nomDuService }}",
+          "nom": "{{ service.nom }}",
           "illustration": "{{ service.illustration }}",
-          "description": "{{ service.descriptionService }}",
+          "description": "{{ service.description }}",
           "lienInterne": "{{ service.url }}",
           "sources": {{ service.sources | jsonify }}
         }
