--- a/catalogue.html
+++ b/catalogue.html
@@ -20,7 +20,8 @@ permalink: /catalogue/
           "description": "{{ service.description }}",
           "lienInterne": "{{ service.url }}",
           "sources": {{ service.sources | jsonify }},
-          "besoins": {{ service.besoins | jsonify }}
+          "besoins": {{ service.besoins | jsonify }},
+          "droitsAcces": {{ service.droitsAcces | jsonify }}
         }
           {% unless forloop.last %},{% endunless %}
           {% endfor %}
@@ -33,9 +34,9 @@ permalink: /catalogue/
               "description": "{{ ressource.description }}",
               "lienInterne": "{{ ressource.url }}",
               "sources": {{ ressource.sources | jsonify }},
-              "besoins": {{ ressource.besoins | jsonify }}
-
-      }
+              "besoins": {{ ressource.besoins | jsonify }},
+              "droitsAcces": {{ ressource.droitsAcces | jsonify }}
+          }
           {% unless forloop.last %},{% endunless %}
           {% endfor %}
       ]
