Filtre sur le thème

--- a/catalogue.html
+++ b/catalogue.html
@@ -22,6 +22,7 @@ permalink: /catalogue/
           "lienInterne": "{{ service.url }}",
           "sources": {{ service.sources | jsonify }},
           "besoins": {{ service.besoins | jsonify }},
+          "themes": {{ service.themes | jsonify }},
           "droitsAcces": {{ service.droitsAcces | jsonify }}
         }
           {% unless forloop.last %},{% endunless %}
@@ -38,6 +39,7 @@ permalink: /catalogue/
               "sources": {{ ressource.sources | jsonify }},
               "besoins": {{ ressource.besoins | jsonify }},
               "droitsAcces": {{ ressource.droitsAcces | jsonify }},
+              "themes": {{ ressource.themes | jsonify }},
               "format": "{{ ressource.format }}"
           }
           {% unless forloop.last %},{% endunless %}
