Ajoute le lien externe dans les cartes

--- a/catalogue.html
+++ b/catalogue.html
@@ -20,6 +20,7 @@ permalink: /catalogue/
           "illustration": "{{ service.illustration }}",
           "description": "{{ service.description }}",
           "lienInterne": "{{ service.url }}",
+          "lienExterne": "{{ service.lien }}",
           "sources": {{ service.sources | jsonify }},
           "besoins": {{ service.besoins | jsonify }},
           "themes": {{ service.themes | jsonify }},
@@ -36,6 +37,7 @@ permalink: /catalogue/
               "illustration": "{{ ressource.illustration }}",
               "description": "{{ ressource.description }}",
               "lienInterne": "{{ ressource.url }}",
+              "lienExterne": "{{ ressource.lien }}",
               "sources": {{ ressource.sources | jsonify }},
               "besoins": {{ ressource.besoins | jsonify }},
               "droitsAcces": {{ ressource.droitsAcces | jsonify }},
