[PRETTIER] Exécute Prettier sur l'ensemble du catalogue

--- a/catalogue.html
+++ b/catalogue.html
@@ -3,11 +3,18 @@ layout: catalogue
 permalink: /catalogue/
 ---
 
-<script type="module" crossorigin src="/lib-catalogue/dist/assets/index.js"></script>
+<script
+  type="module"
+  crossorigin
+  src="/lib-catalogue/dist/assets/index.js"
+></script>
 
 <section class="chapeau">
-    <h1>Les services et ressources cyber</h1>
-    <p>Trouvez les services et les ressources adaptées à vos besoins et votre niveau cyber.</p>
+  <h1>Les services et ressources cyber</h1>
+  <p>
+    Trouvez les services et les ressources adaptées à vos besoins et votre
+    niveau cyber.
+  </p>
 </section>
 
 <script type="application/json" id="donnees">
