--- a/catalogue.html
+++ b/catalogue.html
@@ -10,6 +10,11 @@ permalink: /catalogue/
 ></script>
 
 <section class="chapeau">
+  <div class="fil-ariane">
+    <a href="/">Accueil</a>
+    <span><img src="/assets/images/icone-chevron-droite.svg" /> </span>
+    <span>Les services et ressources cyber</span>
+  </div>
   <h1>Les services et ressources cyber</h1>
   <p>
     Trouvez les services et les ressources adaptées à vos besoins et votre
