--- a/catalogue.html
+++ b/catalogue.html
@@ -10,16 +10,18 @@ permalink: /catalogue/
 ></script>
 
 <section class="chapeau">
-  <div class="fil-ariane">
-    <a href="/">Accueil</a>
-    <span><img src="/assets/images/icone-chevron-droite.svg" /> </span>
-    <span>Les services et ressources cyber</span>
+  <div class="contenu-section">
+      <div class="fil-ariane">
+        <a href="/">Accueil</a>
+        <span><img src="/assets/images/icone-chevron-droite.svg" /> </span>
+        <span>Les services et ressources cyber</span>
+      </div>
+      <h1>Les services et ressources cyber</h1>
+      <p>
+        Trouvez les services et les ressources adaptées à vos besoins et votre
+        niveau cyber.
+      </p>
   </div>
-  <h1>Les services et ressources cyber</h1>
-  <p>
-    Trouvez les services et les ressources adaptées à vos besoins et votre
-    niveau cyber.
-  </p>
 </section>
 
 <script type="application/json" id="donnees">
