Ajoute un chapeau sur la page de parcours

--- a/catalogue.html
+++ b/catalogue.html
@@ -9,7 +9,7 @@ permalink: /catalogue/
   src="/lib-catalogue/dist/assets/index.js"
 ></script>
 
-<section class="chapeau">
+<section class="chapeau fond-sombre">
   <div class="contenu-section">
       <div class="fil-ariane">
         <a href="/">Accueil</a>
