--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -7,3 +7,24 @@ layout: parcours
         <h2>Innovation ANSSI</h2>
     </div>
 </section>
+
+<section class="chapeau fond-sombre">
+    <div class="contenu-section">
+        <div class="fil-ariane">
+            <a href="/">Accueil</a>
+            <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+            <a href="#">Progresser en cybersécurité</a>
+            <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+            <span>Cybersécurité : se lancer !</span>
+        </div>
+        <h1>Cybersécurité&nbsp;: se lancer !</h1>
+        <p>
+            Votre organisation souhaite mettre en œuvre des premières actions concrètes pour commencer à renforcer son
+            niveau de cybersécurité. Découvrez des services et ressources sélectionnés par l’ANSSI pour vous aider.
+        </p>
+        <div class="cta">
+            <p>Trouvez le parcours cyber adapté à votre organisation</p>
+            <a href="/test" class="bouton primaire">Testez votre maturité</a>
+        </div>
+    </div>
+</section>
