Ajoute le sommaire et les sections (vides)

--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -15,7 +15,7 @@ layout: parcours
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
             <a href="#">Progresser en cybersécurité</a>
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <span>Cybersécurité : se lancer !</span>
+            <span>Cybersécurité&nbsp;: se lancer !</span>
         </div>
         <h1>Cybersécurité&nbsp;: se lancer !</h1>
         <p>
@@ -27,4 +27,26 @@ layout: parcours
             <a href="/test" class="bouton primaire">Testez votre maturité</a>
         </div>
     </div>
+</section>
+
+<section class="sommaire">
+    <div class="contenu-section">
+        <div class="groupe-boutons">
+            <a href="#sensibiliser" class="actif bouton secondaire">Sensibiliser</a>
+            <a href="#securiser" class="bouton secondaire">Sécuriser</a>
+            <a href="#etre-accompagne" class="bouton secondaire">Être accompagné</a>
+        </div>
+    </div>
+</section>
+
+<section id="sensibiliser">
+
+</section>
+
+<section id="securiser">
+
+</section>
+
+<section id="etre-accompagne">
+
 </section>
