Ajoute le parcours `Sécuriser`

--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -50,8 +50,14 @@ layout: parcours
     </div>
 </section>
 
-<section id="securiser" class="action">
-    <div class="contenu-section"></div>
+<section id="securiser" class="action fond-alternatif">
+    <div class="contenu-section">
+        <h1>Sécuriser</h1>
+        <p class="explication">Mettez en œuvre rapidement des premières mesures de sécurité et réduisez les vulnérabilités de vos systèmes.</p>
+        <img class="illustration" src="/assets/images/illustration-securiser.svg"/>
+        <h2>Les services et ressources</h2>
+        {% include services-ressources.html parcours='DEBUTER_SECURISER' %}
+    </div>
 </section>
 
 <section id="etre-accompagne" class="action">
