Ajoute le parcours `Être accompagné`

--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -61,5 +61,11 @@ layout: parcours
 </section>
 
 <section id="etre-accompagne" class="action">
-    <div class="contenu-section"></div>
+    <div class="contenu-section">
+        <h1>Être accompagné</h1>
+        <p class="explication">Faites-vous accompagner par un prestataire de proximité.</p>
+        <img class="illustration" src="/assets/images/illustration-etre-accompagne.svg"/>
+        <h2>Les services et ressources</h2>
+        {% include services-ressources.html parcours='DEBUTER_ETRE_ACCOMPAGNE' %}
+    </div>
 </section>
