Ajoute l’encart de test de maturité

--- a/catalogue.html
+++ b/catalogue.html
@@ -65,4 +65,4 @@ permalink: /catalogue/
 </script>
 
 <div id="catalogue"></div>
-{% include encart-test-maturite.html %}
+{% include encart-test-maturite.html fond='clair' %}
