--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -69,3 +69,5 @@ layout: parcours
         {% include services-ressources.html parcours='DEBUTER_ETRE_ACCOMPAGNE' %}
     </div>
 </section>
+
+{% include encart-test-maturite.html fond='sombre' %}
