Ajuste le parcours en mode tablette

--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -15,9 +15,9 @@ layout: parcours
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
             <a href="#">Progresser en cybersécurité</a>
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <span>Cybersécurité&nbsp;: se lancer !</span>
+            <span>Cybersécurité&nbsp;: se lancer&nbsp;!</span>
         </div>
-        <h1>Cybersécurité&nbsp;: se lancer !</h1>
+        <h1>Cybersécurité&nbsp;: se lancer&nbsp;!</h1>
         <p>
             Votre organisation souhaite mettre en œuvre des premières actions concrètes pour commencer à renforcer son
             niveau de cybersécurité. Découvrez des services et ressources sélectionnés par l’ANSSI pour vous aider.
