Ajuste le parcours pour afficher une grille responsive

--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -41,10 +41,12 @@ layout: parcours
 
 <section id="sensibiliser" class="action">
     <div class="contenu-section">
-        <h1>Sensibiliser</h1>
-        <p class="explication">Commencez à sensibiliser les dirigeants et salariés aux risques cyber et aux bonnes
-            pratiques.</p>
-        <img class="illustration" src="/assets/images/illustration-sensibiliser.svg"/>
+        <div class="description">
+            <h1>Sensibiliser</h1>
+            <p class="explication">Commencez à sensibiliser les dirigeants et salariés aux risques cyber et aux bonnes
+                pratiques.</p>
+            <img class="illustration" src="/assets/images/illustration-sensibiliser.svg"/>
+        </div>
         <h2>Les services et ressources</h2>
         {% include services-ressources.html parcours='DEBUTER_SENSIBILISER' %}
     </div>
@@ -52,9 +54,12 @@ layout: parcours
 
 <section id="securiser" class="action fond-alternatif">
     <div class="contenu-section">
-        <h1>Sécuriser</h1>
-        <p class="explication">Mettez en œuvre rapidement des premières mesures de sécurité et réduisez les vulnérabilités de vos systèmes.</p>
-        <img class="illustration" src="/assets/images/illustration-securiser.svg"/>
+        <div class="description">
+            <h1>Sécuriser</h1>
+            <p class="explication">Mettez en œuvre rapidement des premières mesures de sécurité et réduisez les
+                vulnérabilités de vos systèmes.</p>
+            <img class="illustration" src="/assets/images/illustration-securiser.svg"/>
+        </div>
         <h2>Les services et ressources</h2>
         {% include services-ressources.html parcours='DEBUTER_SECURISER' %}
     </div>
@@ -62,9 +67,11 @@ layout: parcours
 
 <section id="etre-accompagne" class="action">
     <div class="contenu-section">
-        <h1>Être accompagné</h1>
-        <p class="explication">Faites-vous accompagner par un prestataire de proximité.</p>
-        <img class="illustration" src="/assets/images/illustration-etre-accompagne.svg"/>
+        <div class="description">
+            <h1>Être accompagné</h1>
+            <p class="explication">Faites-vous accompagner par un prestataire de proximité.</p>
+            <img class="illustration" src="/assets/images/illustration-etre-accompagne.svg"/>
+        </div>
         <h2>Les services et ressources</h2>
         {% include services-ressources.html parcours='DEBUTER_ETRE_ACCOMPAGNE' %}
     </div>
