--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -40,42 +40,27 @@ permalink: /parcours-debuter/
     </div>
 </section>
 
-<section id="sensibiliser" class="action">
-    <div class="contenu-section">
-        <div class="description">
-            <h1>Sensibiliser</h1>
-            <p class="explication">Commencez à sensibiliser les dirigeants et salariés aux risques cyber et aux bonnes
-                pratiques.</p>
-            <img class="illustration" src="/assets/images/illustration-sensibiliser.svg"/>
-        </div>
-        <h2>Les services et ressources</h2>
-        {% include services-ressources.html parcours='DEBUTER_SENSIBILISER' %}
-    </div>
-</section>
+{% include action-parcours.html
+id='sensibiliser'
+titre='Sensibiliser'
+explication='Commencez à sensibiliser les dirigeants et salariés aux risques cyber et aux bonnes
+pratiques.'
+parcours='DEBUTER_SENSIBILISER'
+%}
 
-<section id="securiser" class="action fond-alternatif">
-    <div class="contenu-section">
-        <div class="description">
-            <h1>Sécuriser</h1>
-            <p class="explication">Mettez en œuvre rapidement des premières mesures de sécurité et réduisez les
-                vulnérabilités de vos systèmes.</p>
-            <img class="illustration" src="/assets/images/illustration-securiser.svg"/>
-        </div>
-        <h2>Les services et ressources</h2>
-        {% include services-ressources.html parcours='DEBUTER_SECURISER' %}
-    </div>
-</section>
+{% include action-parcours.html
+id='securiser'
+titre='Sécuriser'
+explication='Mettez en œuvre rapidement des premières mesures de sécurité et réduisez les vulnérabilités de vos systèmes.'
+parcours='DEBUTER_SECURISER'
+fondAlternatif=true
+%}
 
-<section id="etre-accompagne" class="action">
-    <div class="contenu-section">
-        <div class="description">
-            <h1>Être accompagné</h1>
-            <p class="explication">Faites-vous accompagner par un prestataire de proximité.</p>
-            <img class="illustration" src="/assets/images/illustration-etre-accompagne.svg"/>
-        </div>
-        <h2>Les services et ressources</h2>
-        {% include services-ressources.html parcours='DEBUTER_ETRE_ACCOMPAGNE' %}
-    </div>
-</section>
+{% include action-parcours.html
+id='etre-accompagne'
+titre='Être accompagné'
+explication='Faites-vous accompagner par un prestataire de proximité.'
+parcours='DEBUTER_ETRE_ACCOMPAGNE'
+%}
 
 {% include encart-test-maturite.html fond='sombre' %}
