Ajoute les parcours `Anticiper` et `Être accompagné`

--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -38,6 +38,8 @@ permalink: /parcours-approfondir/
             <a href="#progresser" class="bouton secondaire">Progresser</a>
             <a href="#piloter" class="bouton secondaire">Piloter</a>
             <a href="#tester" class="bouton secondaire">Tester</a>
+            <a href="#anticiper" class="bouton secondaire">Anticiper</a>
+            <a href="#etre-accompagne" class="bouton secondaire">Être accompagné</a>
         </div>
     </div>
 </section>
@@ -72,5 +74,18 @@ parcours='APPROFONDIR_TESTER'
 fondAlternatif=true
 %}
 
+{% include action-parcours.html
+id='anticiper'
+titre='Anticiper'
+explication='Préparez-vous à un incident ou une crise d’origine cyber afin de mieux y répondre.'
+parcours='APPROFONDIR_ANTICIPER'
+%}
+
+{% include action-parcours.html
+id='etre-accompagne'
+titre='Être accompagné'
+explication='Faites-vous accompagner par un prestataire de proximité.'
+parcours='APPROFONDIR_ETRE_ACCOMPAGNE'
+%}
 
 {% include encart-test-maturite.html fond='sombre' %}
