[ACCUEIL] Affiche les titres et le chapeau

--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 ---
 layout: accueil
 ---
-<section class="chapeau">
-    <h1>Mes Services Cyber</h1>
-    <p>Trouvez les services et les ressources adaptées à vos besoins et votre niveau cyber.</p>
-    <a href="/test-maturite" class="bouton primaire">Testez votre maturité cyber</a>
-    <a href="/catalogue/" class="bouton secondaire">Découvrir nos services</a>
+<section class="titres-page">
+    <div class="contenu-section">
+        <h1>MesServicesCyber</h1>
+        <h2>Innovation ANSSI</h2>
+    </div>
+</section>
+<section class="chapeau fond-sombre">
+    <div class="contenu-section">
+        <h1>Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
+        <p>Accédez aux services et ressources cyber proposés par l’ANSSI et ses partenaires.</p>
+        <a href="/test-maturite" class="bouton primaire">Tester votre maturité cyber</a>
+        <a href="/catalogue/" class="bouton secondaire">Découvrir nos services</a>
+    </div>
 </section>
 <section class="services-dispos">
-    <h1>Les services disponibles</h1>
-    <div class="carte service">
-        <figure>
-            <img src="/assets/images/illustrations-services/demainspecialistecyber/demainspecialistecyber.png">
-            <figcaption>Service</figcaption>
-        </figure>
-        <div class="contenu">
-            <h3>Demain Spécialiste Cyber</h3>
-            <span>S’informer sur la cybersécurité et ses métiers.</span>
-            <a href="/">Découvrir le service
-                <img src="/assets/images/icone-fleche-droite.svg">
-            </a>
-            <div class="labels">
-                <span>ANSSI</span>
-                <span>Innovation ANSSI</span>
+    <div class="contenu-section">
+        <h1>Les services disponibles</h1>
+        <div class="carte service">
+            <figure>
+                <img src="/assets/images/illustrations-services/demainspecialistecyber/demainspecialistecyber.png">
+                <figcaption>Service</figcaption>
+            </figure>
+            <div class="contenu">
+                <h3>Demain Spécialiste Cyber</h3>
+                <span>S’informer sur la cybersécurité et ses métiers.</span>
+                <a href="/">Découvrir le service
+                    <img src="/assets/images/icone-fleche-droite.svg">
+                </a>
+                <div class="labels">
+                    <span>ANSSI</span>
+                    <span>Innovation ANSSI</span>
+                </div>
             </div>
         </div>
     </div>
