[ACCUEIL] Mets en forme la section des services

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@ layout: accueil
 </section>
 <section class="services-dispos">
     <div class="contenu-section">
-        <h1>Les services disponibles</h1>
+        <h1>Des services adaptés à vos besoins cyber</h1>
+
+        <h2>Des services pour comprendre la cyber, être sensibilisé, mais aussi se former et former ses équipes à la
+            cybersécurité.</h2>
         <div class="carte service">
             <figure>
                 <img src="/assets/images/illustrations-services/demainspecialistecyber/demainspecialistecyber.png">
@@ -35,5 +38,6 @@ layout: accueil
                 </div>
             </div>
         </div>
+        <a class="bouton primaire">Découvrez plus de services</a>
     </div>
 </section>
