[ACCUEIL] Ajoute l’encart pour le parcours `Débuter`

--- a/index.html
+++ b/index.html
@@ -31,3 +31,21 @@ layout: accueil
         <a class="bouton primaire">Découvrez plus de services</a>
     </div>
 </section>
+
+<section class="encart fond-sombre">
+    <div class="contenu-section">
+        <div class="liste-parcours">
+            <div class="carte parcours">
+                <img
+                        src="/assets/images/debuter-cyber.png"
+                        alt="Illustration débutant cyber"
+                />
+                <h2>Votre organisation débute en cyber ?</h2>
+                <p>
+                    Découvrez les services et les ressources adaptés à chaque étape de votre parcours cyber.
+                </p>
+                <a href="/parcours-debuter" class="bouton primaire">Débutez en cybersécurité</a>
+            </div>
+        </div>
+    </div>
+</section>
