[ACCUEIL] Ajoute l’encart pour la directive NIS2

--- a/index.html
+++ b/index.html
@@ -57,21 +57,38 @@ layout: accueil
         <div class="fonctions-msc">
             <div class="fonction-msc couleur1">
                 <h2>Gérez votre profil ANSSI</h2>
-                <p>Dites-le nous une fois pour utiliser bientôt tous les services numériques de l'ANSSI en commençant par vous authentifier via ProConnect.</p>
+                <p>Dites-le nous une fois pour utiliser bientôt tous les services numériques de l'ANSSI en commençant
+                    par vous authentifier via ProConnect.</p>
             </div>
             <div class="fonction-msc couleur2">
                 <h2>Comparez-vous avec d’autres entités</h2>
-                <p>Comparez votre organisation à d'autres similiaire à la vôtre pour identifier vos atouts et vos axes d'amélioration.</p>
+                <p>Comparez votre organisation à d'autres similiaire à la vôtre pour identifier vos atouts et vos axes
+                    d'amélioration.</p>
             </div>
             <div class="fonction-msc couleur1">
                 <h2>Accédez à vos services et ressources</h2>
-                <p>Accédez à une liste de services et ressources personnalisés à partager au sein de votre organisation pour progression en cybersécurité.</p>
+                <p>Accédez à une liste de services et ressources personnalisés à partager au sein de votre organisation
+                    pour progression en cybersécurité.</p>
             </div>
             <div class="fonction-msc couleur2">
                 <h2>Trouvez les contacts pour vous accompagner</h2>
-                <p>Retrouvez une liste de contacts et partenaires de votre région pour répondre à toutes vos questions sur la cyber. (Bientôt disponible)</p>
+                <p>Retrouvez une liste de contacts et partenaires de votre région pour répondre à toutes vos questions
+                    sur la cyber. (Bientôt disponible)</p>
             </div>
         </div>
         <a href="#" class="bouton primaire">Connectez-vous sur MesServicesCyber</a>
+    </div>
+</section>
+
+<section class="nis2">
+    <div class="contenu-section">
+        <img src="assets/images/directive-nis2.svg" alt="NIS2">
+        <h1>La Directive NIS2 est là&nbsp;!</h1>
+        <p>Connaissez-vous cette Directive ? Savez-vous si votre entité sera régulée ? Pour en savoir plus et faire le
+            test pour vérifier si votre entité sera soumise à cette directive, allez sur MonEspaceNIS2.</p>
+        <a href="https://monespacenis2.cyber.gouv.fr/" target="_blank" class="bouton secondaire">
+            <span>En savoir plus</span>
+            <img src="/assets/images/icone-lien-externe.svg">
+        </a>
     </div>
 </section>
