[ACCUEIL] Ajoute l’encart ANSSI

--- a/index.html
+++ b/index.html
@@ -92,3 +92,16 @@ layout: accueil
         </a>
     </div>
 </section>
+
+<section class="anssi">
+    <div class="contenu-section">
+        <h1>Qu’est-ce que l’ANSSI&nbsp;?</h1>
+        <img src="assets/images/logo-anssi.svg" class="logo" alt="ANSSI">
+        <p>Créée en 2009, l’Agence nationale de la sécurité des systèmes d’information (ANSSI) est l’autorité nationale en matière de cybersécurité et de cyberdéfense.</p>
+        <p>Son action pour la protection de la Nation face aux cyberattaques se traduit en quatre grandes missions : défendre, connaître, partager, accompagner.</p>
+        <a href="https://monespacenis2.cyber.gouv.fr/" target="_blank" class="bouton secondaire">
+            <span>En savoir plus</span>
+            <img src="/assets/images/icone-lien-externe.svg">
+        </a>
+    </div>
+</section>
