[ACCUEIL] Adapte l’affichage en mode tablette

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@ layout: accueil
     <div class="contenu-section">
         <h1>Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
         <p>Accédez aux services et ressources cyber proposés par l’ANSSI et ses partenaires.</p>
-        <a href="/test-maturite" class="bouton primaire">Tester votre maturité cyber</a>
-        <a href="/catalogue/" class="bouton secondaire">Découvrir nos services</a>
+        <div class="boutons">
+            <a href="/test-maturite" class="bouton primaire">Tester votre maturité cyber</a>
+            <a href="/catalogue/" class="bouton secondaire">Découvrir nos services</a>
+        </div>
     </div>
 </section>
 <section class="services-dispos">
@@ -82,7 +84,7 @@ layout: accueil
 
 <section class="nis2">
     <div class="contenu-section">
-        <img src="assets/images/directive-nis2.svg" alt="NIS2">
+        <img class="illustration" src="assets/images/directive-nis2.svg" alt="NIS2">
         <h1>La Directive NIS2 est là&nbsp;!</h1>
         <p>Connaissez-vous cette Directive ? Savez-vous si votre entité sera régulée ? Pour en savoir plus et faire le
             test pour vérifier si votre entité sera soumise à cette directive, allez sur MonEspaceNIS2.</p>
@@ -97,8 +99,10 @@ layout: accueil
     <div class="contenu-section">
         <h1>Qu’est-ce que l’ANSSI&nbsp;?</h1>
         <img src="assets/images/logo-anssi.svg" class="logo" alt="ANSSI">
-        <p>Créée en 2009, l’Agence nationale de la sécurité des systèmes d’information (ANSSI) est l’autorité nationale en matière de cybersécurité et de cyberdéfense.</p>
-        <p>Son action pour la protection de la Nation face aux cyberattaques se traduit en quatre grandes missions : défendre, connaître, partager, accompagner.</p>
+        <p>Créée en 2009, l’Agence nationale de la sécurité des systèmes d’information (ANSSI) est l’autorité nationale
+            en matière de cybersécurité et de cyberdéfense.</p>
+        <p>Son action pour la protection de la Nation face aux cyberattaques se traduit en quatre grandes missions :
+            défendre, connaître, partager, accompagner.</p>
         <a href="https://monespacenis2.cyber.gouv.fr/" target="_blank" class="bouton secondaire">
             <span>En savoir plus</span>
             <img src="/assets/images/icone-lien-externe.svg">
